k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: company-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: company-backend
  template:
    metadata:
      labels:
        app: company-backend
    spec:
      containers:
        - name: backend
          image: 925047940866.dkr.ecr.ap-northeast-1.amazonaws.com/std01-ex8-backend:aa538b47cf52f35fe4803154b7b57fd646e989eb
          ports:
            - containerPort: 8000
