k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: company-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: company-frontend
  template:
    metadata:
      labels:
        app: company-frontend
    spec:
      containers:
        - name: frontend
          image: 925047940866.dkr.ecr.ap-northeast-1.amazonaws.com/std01-ex8-frontend:b1543e7466b25d1f28a424348aeb422958358789
          ports:
            - containerPort: 80
